moved MatDialog initiators from AppComponent to DialogService to manage access to the methods in app and inside dialogs; binded other components to the new service; logic inside NewClassFormComponent

--- a/src/app/components/user-page/user-page.component.html
+++ b/src/app/components/user-page/user-page.component.html
@@ -2,12 +2,12 @@
     <h1>Личный кабинет</h1>
 
     <!-- Check if user exists before rendering the form -->
-    <ng-container *ngIf="userData">
+    <ng-container *ngIf="currentUserData()">
         <!-- User info row: userpic and name -->
         <div class="flex-row center-row user-info">
             <div class="flex-row center-row contact-info">
-                <img [src]="userData.img || imgDefault" alt="Userpic" class="userpic" />
-                <h2>{{ userData.name }}</h2>
+                <img [src]="currentUserData().img || imgDefault" alt="Userpic" class="userpic" />
+                <h2>{{ currentUserData().name }}</h2>
             </div>
             <div class="flex-row utility-btn utility-btn_logout" (click)="logout()">
                 <mat-icon>logout</mat-icon>
@@ -30,7 +30,7 @@
                 <!-- Email (Top-left sector) -->
                 <div class="flex-row center-row contact-info email">
                     <label class="label">e-mail:</label>
-                    <input class="input" type="text" [(ngModel)]="userData.email" [readonly]="!isEditing"
+                    <input class="input" type="text" [(ngModel)]="currentUserData().email" [readonly]="!isEditing"
                         [ngClass]="{ 'editable': isEditing }" />
                 </div>
                 <!-- Empty (Top-right sector) -->
@@ -38,13 +38,13 @@
                 <!-- Telegram (Bottom-left sector) -->
                 <div class="flex-row center-row contact-info telegram">
                     <label class="label">telegram:</label>
-                    <input class="input" type="text" [(ngModel)]="userData.telegram" [readonly]="!isEditing"
+                    <input class="input" type="text" [(ngModel)]="currentUserData().telegram" [readonly]="!isEditing"
                         [ngClass]="{ 'editable': isEditing }" />
                 </div>
                 <!-- Phone (Bottom-right sector) -->
                 <div class="flex-row center-row contact-info phone">
                     <label class="label">phone:</label>
-                    <input class="input" type="text" [(ngModel)]="userData.phone" [readonly]="!isEditing"
+                    <input class="input" type="text" [(ngModel)]="currentUserData().phone" [readonly]="!isEditing"
                         [ngClass]="{ 'editable': isEditing }" />
                 </div>
             </div>
@@ -54,7 +54,7 @@
                 <!-- Season Pass -->
                 <p>
                     <strong>Абонемент:</strong>
-                    {{ userData.seaspass > 0 ? getSeasonPassText(userData.seaspass)
+                    {{ currentUserData().seaspass > 0 ? getSeasonPassText(currentUserData().seaspass)
                     : 'Чтобы приобрести абонемент, свяжитесь с преподавателем.' }}
                 </p>
                 <!-- Sign up for a new class button -->
