--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -166,6 +166,12 @@ mat-label {
 .submit {
     padding: 0 20px;
 
+    mat-spinner {
+        width: 100px;
+        height: 100px;
+        stroke: var(--brand-color);
+    }
+
     &__button {
         margin-top: 10px;
         padding: 10px;
