--- a/src/app/components/timeline/timeline.component.scss
+++ b/src/app/components/timeline/timeline.component.scss
@@ -1,35 +1,25 @@
-.timeline-slot {
-    padding: 5px;
-    margin: 2px 0;
-}
-
 .timeline {
     display: flex;
     flex-direction: row;
-
-    // :first-child {
-    //     margin-left: 7px;
-    // }
+    flex-wrap: wrap;
+    margin: 4px 0;
 
     &__box {
         justify-content: flex-start;
         align-items: flex-start;
         width: 150px;
-        flex-shrink: 0;
-
+        width: 90px;
+        flex-grow: 1;
         gap: 2px;
         padding: 10px 0 10px 0px;
         border-radius: 5px;
         font-size: 12px;
         color: #FFFFFF;
         position: relative;
-        margin-left: 0 !important;
+
+        cursor: default;
 
         background-color: var(--slot-color);
-
-        // &:active {
-        //     cursor: grabbing;
-        // }
 
         &.free {
             --slot-color: #50CB85;
