--- a/src/app/components/user-page/user-page.component.scss
+++ b/src/app/components/user-page/user-page.component.scss
@@ -52,6 +52,10 @@ p {
     column-gap: 20px;
     position: relative;
 
+    .contacts-title {
+        display: none;
+    }
+
     .email {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
@@ -201,10 +205,14 @@ p {
 }
 
 @media (max-width: 768px) {
-
     .my-details {
         display: flex;
         flex-direction: column;
+
+        .contacts-title {
+            display: flex;
+            font-weight: bold;
+        }
     }
 
     .empty-sector {
