created CancelClass component; Class Cancellation Policy (penalty within 24hrs if cinfirmed); refactored Class interface (enum); renamed User->UserData to avoid conflicts with Firebase-Auth User; replaced 'any' types with Signal where signals are used

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -59,7 +59,7 @@
             </button>
             <button id="account-button" mat-icon-button (click)="handleLogin()">
                 <mat-icon *ngIf="!currentUserData()">login</mat-icon>
-                <img *ngIf="currentUserData()" [src]="currentUserData().img" alt="userpic">
+                <img *ngIf="currentUserData() as userData" [src]="userData.img" alt="userpic">
             </button>
         </div>
 
