--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -139,7 +139,7 @@
         </p>
         <p class="submit__message" *ngIf="currentFormState === 'ErrorState'">
             Произошла ошибка во время отправления запроса. Пожалуйста, попробуйте снова.
-            <!-- There was an error submitting your request. Please try again. -->
+            <!-- Error while submitting the form. Please try again. -->
         </p>
     </div>
 
