--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,7 +1,7 @@
 <div class="flex-row timeline">
 
     <div *ngFor='let timeSlot of timeSlots' (click)='onSlotClicked(timeSlot)' #timeSlot
-        class="flex-col center-row timeline__box w-100 {{timeSlot.status}}">
+        class="flex-col center-row timeline__box w-100 {{timeSlot.status}} {{ isSelected(timeSlot) ? 'selected' : '' }}">
         <div class='timeline__circle'>
         </div>
         <div class='flex-col timeline__text-group'>
